# nbody_k

./: CMakeLists.txt  README.md  main_aos.cpp  main_soa.cpp
src/: main_3D.cpp
